# kruger-task

./: Cargo.toml  README.md  Rocket.toml
upload/: data.csv
