[package]
name = "kruger-task"
version = "0.1.0"
authors = ["mateo-avila-pava <maavilapa@unal.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "lib"
#path = "src/lib.rs"

#[[bin]]
#name = "kruger-task"
#path = "src/bin.rs"

[dependencies]
#rocket = "0.4"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
rand = "0.6"
postgres = "0.17.5"
csv = "1.1"
chrono = "0.4.19"
diesel = { version = "0.7.0", features = ["postgres", "chrono"] }
rocket = "0.4.6"
#[dependencies.rocket_contrib]
#version = "0.4"
#default-features = false
#features = ["json"]
